Init exchange compare

--- a/src/app/exchange-compare/exchange-compare.component.html
+++ b/src/app/exchange-compare/exchange-compare.component.html
@@ -2,6 +2,4 @@
   Loading
 </span>
 <span>{{error}}</span>
-<div *ngIf="exchanges" [innerHTML]="generatedTableHtml">
-
-</div>
+{{generatedTableHtml}}
